\name{metabinRNews}
\title{metabinRNews News}
\encoding{UTF-8}

\section{Version 1.1.0 (2022-10-xx)}{\itemize{
\item Bump x.y.z version to odd y following creation of RELEASE_3_16 branch.
}}

\section{Version 1.0.0 (2022-10-xy)}{\itemize{
\item Bioconductor 3.16 Release.
New package \pkg{metabinR}, Phylogenetic, Distance
and Other Calculations on VCF and Fasta Files.
}}

\section{Version 0.99.1 (2022-10-11)}{\itemize{
\item Precheck changes on vignette.
}}

\section{Version 0.99.0 (2022-10-05)}{\itemize{
\item Submitted to Bioconductor.
}}