@@ -1,7 +1,7 @@
 Package: metabinR
 Type: Package
 Title: Abundance and Compositional Based Binning of Metagenomes
-Version: 0.99.1
+Version: 0.99.2
 biocViews: Classification, Clustering, Microbiome, Sequencing, Software
 Authors@R:
     c(person(given = "Anestis",
@@ -23,8 +23,7 @@ Depends:
     R (>= 4.2)
 Imports: 
     methods,
-    rJava,
-    utils
+    rJava
 SystemRequirements: Java (>= 8)
 RoxygenNote: 7.2.1
 URL: https://github.com/gkanogiannis/metabinR
